--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -88,7 +88,7 @@
           <h1 id="fh5co-logo"><a href="/api/v1/home">Academia</a></h1>
           <nav id="fh5co-menu-wrap" role="navigation">
             <ul class="sf-menu" id="fh5co-primary-menu">
-              <li><a class="active" href="/api/v1/">Home</a></li>
+              <li><a href="/api/v1/">Home</a></li>
               <li>
                 <% if current_user %>
                   <a href="/api/v1/logout" class="fh5co-sub-ddown">User</a>
