bug changes, optimize for heroku

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -107,7 +107,6 @@
               <% if current_user %>
                 <li><a href="/api/v1/articles">Articles</a></li>
               <% end %>
-              <li><a href="/api/v1/contact">Contact</a></li>
             </ul>
           </nav>
         </div>
@@ -138,7 +137,6 @@
               <ul class="link">
                 <li><a href="#">About Us</a></li>
                 <li><a href="#">Articles</a></li>
-                <li><a href="/api/v1/contact">Contact Us</a></li>
               </ul>
             </div>
             <div class="col-md-6">
@@ -150,10 +148,7 @@
         <div class="col-md-3">
           <ul class="social-icons">
             <li>
-              <a href="#"><i class="icon-twitter-with-circle"></i></a>
-              <a href="#"><i class="icon-facebook-with-circle"></i></a>
-              <a href="#"><i class="icon-instagram-with-circle"></i></a>
-              <a href="#"><i class="icon-linkedin-with-circle"></i></a>
+              <a href="https://www.linkedin.com/in/alex-shin-bb5182145/"><i class="icon-linkedin-with-circle"></i></a>
             </li>
           </ul>
         </div>
